syntax = "proto3";

package todo;

option go_package = "./gen;gen";

import "task_platform_proto/third_party/validate.proto";

service TodoService {
  rpc ProcessTodo (TodoRequest) returns (TodoResponse);
}

message TodoRequest {
  string name  = 1 [(validate.rules).string = {min_len: 6}];
  double price = 2 [(validate.rules).double = {gt: 0}];
}

message TodoResponse {
  double discounted_price = 1;
}